--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
     <section>
       <h2>Servicezeiten</h2>
       <p>Wir sind für dich erreichbar:<br>
-         Montag - Freitag: 10:00 - 20:00 Uhr<br>
-         Samstag: 12:00 - 18:00 Uhr<br>
-         Sonntag: Geschlossen</p>
+         Montag - Freitag: 19:00 - 23:00 Uhr<br>
+         Samstag: 19:00 - 00:00 Uhr<br>
+         Sonntag: 19:00 - 23:00 Uhr</p>
     </section>
 
     <section>
