--- a/blacklist.html
+++ b/blacklist.html
@@ -246,22 +246,28 @@
     </thead>
     <tbody>
       <tr>
-        <td data-label="Name">BeispielNutzer123</td>
-        <td data-label="Typ">Nutzer</td>
-        <td data-label="Grund">Verstoß gegen Regeln</td>
-        <td data-label="Datum">15.07.2025</td>
+        <td data-label="Name">rosemaus2</td>
+        <td data-label="Typ">Nutzerinnen</td>
+        <td data-label="Grund">Fehlverhalten und versuchte Kontaktaufnahme mit Anna</td>
+        <td data-label="Datum">16.07.2025</td>
       </tr>
       <tr>
-        <td data-label="Name">SchlechterServer</td>
-        <td data-label="Typ">Server</td>
-        <td data-label="Grund">Spam und Trolling</td>
-        <td data-label="Datum">10.07.2025</td>
+        <td data-label="Name">m.rumpe107</td>
+        <td data-label="Typ">Nutzer</td>
+        <td data-label="Grund">Wegen Lügen und Verbreitung falscher</td>
+        <td data-label="Datum">28.06.2025</td>
       </tr>
       <tr>
-        <td data-label="Name">TrollUserXYZ</td>
-        <td data-label="Typ">Nutzer</td>
-        <td data-label="Grund">Beleidigungen</td>
-        <td data-label="Datum">05.07.2025</td>
+        <td data-label="Name">emmi041971</td>
+        <td data-label="Typ">Nutzerinnen</td>
+        <td data-label="Grund">Emmi, Anna und Anna Lisa wurden dauerhaft gebannt – wegen Fehlverhalten, Lügen und fehlender Einsicht.</td>
+        <td data-label="Datum">04.07.2025</td>
+      </tr>
+      <tr>
+        <td data-label="Name">.paula24</td>
+        <td data-label="Typ">Nutzerinnen</td>
+        <td data-label="Grund">Ich habe versucht, Paula zu schreiben – keine Antwort nach 24h. Ihr Mod hat mir leider einen dauerhaften Bann verpasst.</td>
+        <td data-label="Datum">16.07.2025</td>
       </tr>
     </tbody>
   </table>
