--- a/blacklist.html
+++ b/blacklist.html
@@ -246,6 +246,12 @@
     </thead>
     <tbody>
       <tr>
+        <td data-label="Name">angel330510</td>
+        <td data-label="Typ">Nutzerinnen</td>
+        <td data-label="Grund">Angel330510 arbeitet mit Anna (Anna-Lisa) zusammen – sie verbreiten gemeinsam Lügen und anderes.</td>
+        <td data-label="Datum">17.07.2025</td>
+      </tr>
+      <tr>
         <td data-label="Name">rosemaus2</td>
         <td data-label="Typ">Nutzerinnen</td>
         <td data-label="Grund">Fehlverhalten und versuchte Kontaktaufnahme mit Anna</td>
