--- a/blacklist.html
+++ b/blacklist.html
@@ -248,7 +248,7 @@
       <tr>
         <tr>
         <td data-label="Name">mitsuri_6634</td>
-        <td data-label="Typ">Nutzerinnen</td>
+        <td data-label="Typ">Nutzer</td>
         <td data-label="Grund">Fehlverhalten, versuchte Kontaktaufnahme trotz vorheriger Sperrung, sowie falsche Behauptungen gegenüber Teammitgliedern.</td>
         <td data-label="Datum">17.07.2025</td>
         </tr>
