--- a/ticket.html
+++ b/ticket.html
@@ -51,6 +51,7 @@
       <option value="">Bitte auswählen</option>
       <option value="Discord Server">Discord Server</option>
       <option value="Außerhalb vom Server">Außerhalb vom Server</option>
+      <option value="blackliste antrag von parnerschaft und überprüfen das wirklich aus parnerschaft ist">user blackliste antragen</option>
     </select>
 
     <label for="message">📝 Nachricht:</label>
