--- a/blacklist.html
+++ b/blacklist.html
@@ -246,6 +246,13 @@
     </thead>
     <tbody>
       <tr>
+ 
+        <tr>
+        <td data-label="Name">sk05.</td>
+        <td data-label="Typ">Nutzer</td>
+        <td data-label="Grund">Massiven Fehlverhalten </td>
+        <td data-label="Datum">20.07.2025</td>
+      </tr>
         <tr>
         <td data-label="Name">mitsuri_6634</td>
         <td data-label="Typ">Nutzer</td>
